[package]
name = "tt-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
csv-async = { version = "1.3.1", features = ["with_serde", "tokio"] }
eyre = "0.6.12"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"